<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="?attr/actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".FarerActivity"
            android:id="@+id/constraintLayout"
            android:theme="@style/Theme.Dugg_IN2000">

            <View
                android:id="@+id/toolbarBackground"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbarBackgroundHeight"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:theme="@style/Theme.Dugg_IN2000_ModeColor"  />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                card_view:cardBackgroundColor="@color/grey"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                android:padding="@dimen/margin_medium"
                card_view:cardCornerRadius="@dimen/margin_small"
                app:cardUseCompatPadding="true"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginHorizontal="@dimen/margin_small"
                android:id="@+id/dato"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbarBackground">

                <TextView
                    android:id="@+id/dateTimeDisplay"
                    android:layout_margin="@dimen/margin_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:textSize="45sp" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/dataOgWeather"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dato">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/weatherData"
                    android:layout_margin="@dimen/margin_small"
                    app:cardUseCompatPadding="true"
                    card_view:elevation="5dp"
                    card_view:cardCornerRadius="@dimen/margin_small"
                    card_view:cardBackgroundColor="@color/grey">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:orientation="horizontal"
                        android:padding="@dimen/margin_medium"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:id="@+id/skyDekke"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/skydekke"
                            android:textStyle="bold"
                            android:textColor="@color/orange"
                            android:textSize="@dimen/text_medium"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/skydekkeBilde"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:src="@drawable/ic_cloud"
                            android:visibility="visible"
                            android:layout_marginTop="@dimen/margin_small"
                            android:maxWidth="50dp"
                            android:maxHeight="50dp"
                            android:scaleType="fitXY"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/skyDekke"
                            android:contentDescription="@string/tittel" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:id="@+id/skyDekkeData"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            android:layout_marginStart="@dimen/margin_small"
                            android:gravity="center_vertical"
                            android:textSize="@dimen/text_medium"
                            app:layout_constraintStart_toEndOf="@id/skydekkeBilde"
                            app:layout_constraintTop_toBottomOf="@id/skyDekke" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:id="@+id/fuktighet"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/fuktighet"
                            android:layout_marginTop="@dimen/margin_small"
                            android:textStyle="bold"
                            android:textColor="@color/orange"
                            android:textSize="@dimen/text_medium"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/skydekkeBilde" />

                        <ImageView
                            android:id="@+id/fuktighetBilde"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:src="@drawable/ic_fuktighet"
                            android:visibility="visible"
                            android:layout_marginTop="@dimen/margin_small"
                            android:maxWidth="50dp"
                            android:maxHeight="50dp"
                            android:scaleType="fitXY"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/fuktighet"
                            android:contentDescription="@string/tittel" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:id="@+id/fuktighetData"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            android:layout_marginStart="@dimen/margin_small"
                            android:gravity="center_vertical"
                            android:textSize="@dimen/text_medium"
                            app:layout_constraintStart_toEndOf="@id/fuktighetBilde"
                            app:layout_constraintTop_toBottomOf="@id/fuktighet" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:id="@+id/taake"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/taake"
                            android:layout_marginStart="@dimen/margin_medium"
                            android:textStyle="bold"
                            android:textColor="@color/orange"
                            android:textSize="@dimen/text_medium"
                            app:layout_constraintStart_toEndOf="@id/skyDekke"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/taakeBilde"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:src="@drawable/ic_fog"
                            android:layout_marginStart="@dimen/margin_medium"
                            android:visibility="visible"
                            android:layout_marginTop="@dimen/margin_small"
                            android:layout_marginEnd="@dimen/margin_small"
                            android:maxWidth="50dp"
                            android:maxHeight="50dp"
                            android:scaleType="fitXY"
                            app:layout_constraintStart_toEndOf="@id/skyDekke"
                            app:layout_constraintTop_toBottomOf="@id/taake"
                            android:contentDescription="@string/tittel" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:id="@+id/taakeData"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            android:layout_marginStart="@dimen/margin_small"
                            android:gravity="center_vertical"
                            android:textSize="@dimen/text_medium"
                            app:layout_constraintStart_toEndOf="@id/taakeBilde"
                            app:layout_constraintTop_toBottomOf="@id/taake" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:id="@+id/vindstyrke"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/vindstyrke"
                            android:layout_marginStart="@dimen/margin_medium"
                            android:layout_marginTop="@dimen/margin_small"
                            android:textStyle="bold"
                            android:textColor="@color/orange"
                            android:textSize="@dimen/text_medium"
                            app:layout_constraintStart_toEndOf="@id/fuktighet"
                            app:layout_constraintTop_toBottomOf="@id/taakeBilde" />

                        <ImageView
                            android:id="@+id/vindstyrkeBilde"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:src="@drawable/ic_vindstyrke"
                            android:layout_marginStart="@dimen/margin_medium"
                            android:visibility="visible"
                            android:layout_marginTop="@dimen/margin_small"
                            android:layout_marginEnd="@dimen/margin_small"
                            android:maxWidth="50dp"
                            android:maxHeight="50dp"
                            android:scaleType="fitXY"
                            app:layout_constraintStart_toEndOf="@id/fuktighet"
                            app:layout_constraintTop_toBottomOf="@id/vindstyrke"
                            android:contentDescription="@string/tittel" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:id="@+id/vindstyrkeData"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            android:layout_marginStart="@dimen/margin_small"
                            android:gravity="center_vertical"
                            android:textSize="@dimen/text_medium"
                            app:layout_constraintStart_toEndOf="@id/vindstyrkeBilde"
                            app:layout_constraintTop_toBottomOf="@id/vindstyrke" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/weatherSymbol"
                    android:layout_margin="@dimen/margin_small"
                    app:cardUseCompatPadding="true"
                    card_view:elevation="5dp"
                    card_view:cardCornerRadius="@dimen/margin_small"
                    card_view:cardBackgroundColor="@color/grey">

                    <ImageView
                        android:id="@+id/symbolBilde"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:layout_gravity="center"
                        android:maxWidth="200dp"
                        android:maxHeight="200dp"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/tittel" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/tekst_ikke_tilgang"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/tekst_ikke_tilatt"
                android:textSize="@dimen/text_medium"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilgangKnapp" />

            <Button
                android:layout_width="wrap_content"
                android:visibility="invisible"
                android:layout_height="wrap_content"
                android:id="@+id/tilgangKnapp"
                app:layout_constraintTop_toBottomOf="@id/tilgangKnapp"
                android:text="@string/gi_tilgang"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@color/orange"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/cardviews"
                android:layout_margin="@dimen/margin_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dataOgWeather">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/boatBilde"
                    android:padding="@dimen/margin_big"
                    app:cardUseCompatPadding="true"
                    card_view:elevation="5dp"
                    card_view:cardCornerRadius="@dimen/margin_small"
                    card_view:cardBackgroundColor="@color/grey">

                    <ImageView
                        android:id="@+id/baat"
                        android:layout_width="210dp"
                        android:layout_height="90dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        android:layout_margin="@dimen/margin_medium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:contentDescription="@string/tittel" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/temperatur"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:layout_marginStart="@dimen/margin_small"
                    android:padding="@dimen/margin_big"
                    app:cardUseCompatPadding="true"
                    card_view:elevation="5dp"
                    card_view:cardCornerRadius="@dimen/margin_small"
                    card_view:cardBackgroundColor="@color/grey">

                    <TextView
                        android:layout_width="match_parent"
                        android:id="@+id/temp"
                        android:text=""
                        android:textColor="@color/orange"
                        android:textSize="38sp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <include
        layout="@layout/app_bar_bottom"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>
